--- a/style.css
+++ b/style.css
@@ -15,30 +15,82 @@ body {
     color: white;
 }
 
-.location, 
-.temperature {
-height:30vh;
-width:50%;
-display: flex;
-justify-content: space-around;
-align-items: center;
-}
-
-.temperature {
-    flex-direction: column;
-}
-
-.degree-section {
+.app-wrap {
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    cursor: pointer;
+    padding: 50px 15px 15px;
 }
 
-.degree-section span {
-    margin:10px;
-    font-size:30px;
+header input {
+    width:100%;
+    max-width: 280px;
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    background-color: white;
+    border-radius: 16px 0px 16px 0px;
+    border-bottom:  3px solid orange;
+    font-size: 20px;
+    font-weight: 300;
+    transition: 0.2s ease-in-out;
 }
 
-.degree-section h2 {
-    font-size: 40px;
+header input:focus {
+    background-color: peachpuff;
+}
+
+main {
+    flex: 1 1 100%;
+    padding:  25px 25px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.location .city {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.location .date {
+    color: #fff;
+    font-size: 16px
+}
+
+.current .temp {
+    color: #fff;
+    font-size: 102px;
+    font-weight: 900;
+    margin:  30px 0px;
+    text-shadow: 2px 3px black;
+}
+
+.current .temp span {
+    font-weight: 500;
+}
+
+.current .weather {
+    color: white;
+    font-size: 32px;
+    font-weight: 700;
+    font-style:italic;
+    margin-bottom: 15px;
+    text-shadow:  0px 3 px black;
+}
+
+.current .hi-low {
+    color: white;
+    font-size: 24px;
+    font-weight: 500;
+    text-shadow: 0px 4px black;
 }
